# psycopg-async-listen

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  tox.ini
scripts/: try_send_continous_notifications.py  try_send_notifications.py
src/multiple_tasks/: __init__.py  task.py
src/psycopg_async_listen/: __init__.py  __main__.py  config.py  db.py  execute.py  util.py
src/test/: test_db.py  test_execute.py  test_task.py
