[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[metadata]
name = "psycopg-async-listen"
version = "0.1.0"
authors = [
    {name = "Michael Penhallegon", email = "mike@hematite.tech"}
]
requires-python = ">=3.11"

[options.extras_require]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "ipython",
    "ipdb"
]

[options.packages.find]
where = "src"


[tool.pytest.ini_options]
addopts = "-v --cov=src --cov-report=term-missing"
markers = "integration: mark a test as an integration test"
ignore = [
    "data"
]
asyncio_default_fixture_loop_scope = "module"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E4", "E7", "E9", "F", 
    "C", "W", "I", 
    "D1", "D201", "D202", "D205", "D210", "D212", "D4",
    "B"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
omit = [
    "*/test/*",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "@abstractmethod"
]
exclude_also = [
    "if __name__ == .__main__.:"
]
